@@ -37,6 +37,8 @@
 	fixed Array.reverse() in PHP
 	fixed Reflect.compareMethods in Neko (require Neko 1.8.0)
 	fixed flash7-8 register usage for __init__ and static variables initialization
+	moved StringTools.baseEncode/Decode to haxe.BaseCode
+	fixed binary resources for Flash, JS and PHP outputs
 
 2008-07-28: 2.0
 	fixed current package bug in inherited constructor type
